--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -20,6 +20,7 @@ parts:
 - caption: Interfaces
   chapters:
   - file: python-api
+  - file: numba
   - file: c-api
   - file: cli
   - file: file-formats
