--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -62,6 +62,73 @@ packages = ["tskit"]
 [tool.setuptools.dynamic]
 version = {attr = "tskit._version.tskit_version"}
 
+[project.optional-dependencies]
+test = [
+    "biopython==1.85",
+    "coverage==7.7.0", 
+    "dendropy==5.0.1",
+    "kastore==0.3.3",
+    "lshmm==0.0.8",
+    "msgpack==1.1.0",
+    "msprime==1.3.4",
+    "networkx==3.2.1",
+    "numba==0.61.2; python_version>='3.10'",
+    "numba==0.60.0; python_version=='3.9'",
+    "portion==2.6.0",
+    "pytest==8.3.5",
+    "pytest-cov==6.0.0",
+    "pytest-xdist==3.6.1",
+    "tszip==0.2.5",
+    "xmlunittest==1.0.1",
+    "svgwrite==1.4.3",
+    "newick==1.10.0",
+    "zarr<3",
+]
+
+docs = [
+    "jupyter-book==1.0.4.post1",
+    "breathe==4.35.0",
+    "sphinx-autodoc-typehints==2.3.0",
+    "sphinx-issues==5.0.0",
+    "sphinx-argparse==0.5.2",
+    "msprime==1.3.3",
+    "numba==0.61.2",
+    "sphinx-book-theme",
+    "pandas==2.2.3",
+]
+
+dev = [
+    "biopython>=1.70",
+    "coverage",
+    "dendropy",
+    "flake8",
+    "kastore",
+    "lshmm",
+    "msgpack",
+    "msprime",
+    "mypy",
+    "networkx",
+    "numba",
+    "portion",
+    "pre-commit",
+    "pytest",
+    "pytest-cov",
+    "pytest-xdist", 
+    "setuptools_scm",
+    "svgwrite",
+    "tszip",
+    "xmlunittest",
+    "newick",
+    "zarr<3",
+    "jupyter-book",
+    "breathe",
+    "sphinx-autodoc-typehints",
+    "sphinx-issues",
+    "sphinx-argparse",
+    "sphinx-book-theme",
+    "pandas",
+]
+
 [tool.pytest.ini_options]
 addopts = "-n 4"
 testpaths = ["tests"]
