Use reusable lint workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,24 +9,7 @@ on:
 jobs:
   pre-commit:
     name: Lint
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.12.1
-        with:
-          access_token: ${{ github.token }}
-      - uses: actions/checkout@v4.2.2
-      - uses: actions/setup-python@v5.4.0
-        with:
-          python-version: '3.12'
-      - name: install clang-format
-        if: steps.clang_format.outputs.cache-hit != 'true'
-        run: |
-          pip install setuptools clang-format==6.0.1
-          clang-format -version
-          sudo cp /opt/hostedtoolcache/Python/3.12.11/x64/bin/clang-format /opt/hostedtoolcache/Python/3.12.11/x64/bin/clang-format-6.0
-          clang-format-6.0 -version
-      - uses: pre-commit/action@v3.0.1
+    uses: tskit-dev/.github/.github/workflows/lint.yml@v1
 
   test:
     name: Python
