--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python: [3.9, "3.10", 3.11, 3.12, 3.13]
+        python: ["3.10", 3.11, 3.12, 3.13]
     steps:
       - name: Checkout
         uses: actions/checkout@v4.2.2
@@ -45,7 +45,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python: [3.9, "3.10", 3.11, 3.12, 3.13]
+        python: ["3.10", 3.11, 3.12, 3.13]
         wordsize: [64]
     steps:
       - name: Checkout
@@ -85,10 +85,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.2.2
 
-      - name: Set up Python 3.9
+      - name: Set up Python 3.10
         uses: actions/setup-python@v5.4.0
         with:
-          python-version: 3.9
+          python-version: "3.10"
 
       - name: Build sdist
         shell: bash
@@ -118,7 +118,7 @@ jobs:
     needs: ['OSX']
     strategy:
       matrix:
-        python: [3.9, "3.10", 3.11, 3.12, 3.13]
+        python: ["3.10", 3.11, 3.12, 3.13]
         runner: [macos-13, macos-15]
         include:
           - runner: macos-13
@@ -155,7 +155,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python: [3.9, "3.10", 3.11, 3.12, 3.13]
+        python: ["3.10", 3.11, 3.12, 3.13]
         wordsize: [64]
     steps:
       - name: Download wheels
@@ -179,10 +179,8 @@ jobs:
     needs: ['manylinux']
     strategy:
       matrix:
-        python: [3.9, "3.10", 3.11, 3.12, 3.13]
+        python: ["3.10", 3.11, 3.12, 3.13]
         include:
-          - python: 3.9
-            wheel: cp39
           - python: "3.10"
             wheel: cp310
           - python: 3.11
