--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -15,7 +15,6 @@ classifiers = [
     "Programming Language :: C",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -40,7 +39,7 @@ keywords = [
     "phylogenetics",
     "tskit",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
     "jsonschema>=3.0.0",
     "numpy>=2",
@@ -72,8 +71,7 @@ test = [
     "msgpack==1.1.0",
     "msprime==1.3.4",
     "networkx==3.2.1",
-    "numba==0.61.2; python_version>='3.10'",
-    "numba==0.60.0; python_version=='3.9'",
+    "numba==0.61.2",
     "portion==2.6.0",
     "pytest==8.3.5",
     "pytest-cov==6.0.0",
