Perf -  Shift coverage handling to whole-word bit math.

--- a/c/examples/Makefile
+++ b/c/examples/Makefile
@@ -23,7 +23,7 @@ TSKIT_SOURCE=../tskit/*.c ../subprojects/kastore/kastore.c
 targets = api_structure error_handling \
 	haploid_wright_fisher streaming \
 	tree_iteration tree_traversal \
-	take_ownership
+	take_ownership haplotype_benchmark
 
 all: $(targets)
 
@@ -32,4 +32,3 @@ $(targets): %: %.c
 
 clean:
 	rm -f $(targets)
-
