--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,8 +39,7 @@ jobs:
           python docs/convert_changelog.py python/CHANGELOG.rst > PYTHON-CHANGELOG.txt
       - name: Get the version
         id: get_version
-        run:
-          echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+        run: echo "VERSION=$(echo $GITHUB_REF | cut -d / -f 3)" >> $GITHUB_OUTPUT
       - name: C Release
         uses: softprops/action-gh-release@v2.5.0
         if: startsWith(github.ref, 'refs/tags/') && contains(github.event.ref, 'C_')
