--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,44 @@ jobs:
     name: Lint
     uses: tskit-dev/.github/.github/workflows/lint.yml@v2
 
+  packaging:
+    name: Packaging
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.13.0
+        with:
+          access_token: ${{ github.token }}
+
+      - name: Checkout
+        uses: actions/checkout@v6.0.2
+        with:
+          submodules: true
+
+      - name: Set up Python 3.14
+        uses: actions/setup-python@v6.1.0
+        with:
+          python-version: 3.14
+
+      - name: Install build deps
+        run: |
+          pip install uv
+          uv pip install --system build twine validate-pyproject[all]
+
+      - name: Check package
+        working-directory: python
+        run: |
+          validate-pyproject pyproject.toml
+          python -m build
+          python -m twine check --strict dist/*
+
+      - name: Install and run CLI
+        working-directory: python
+        run: |
+          python -m pip install dist/*.whl
+          tskit --help
+
+
   test:
     name: Python
     runs-on: ${{ matrix.os }}
@@ -53,7 +91,7 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
           version: "0.8.15"
-      
+
       - name: Install dependencies
         working-directory: python
         run: |
