--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -69,9 +69,9 @@ test = [
     "kastore==0.3.3",
     "lshmm==0.0.8",
     "msgpack==1.1.0",
-    "msprime==1.3.4",
+    "msprime==1.4.0b2",
     "networkx==3.2.1",
-    "numba==0.61.2",
+    "numba==0.63.1",
     "portion==2.6.0",
     "pytest==8.3.5",
     "pytest-cov==6.0.0",
@@ -89,8 +89,8 @@ docs = [
     "sphinx-autodoc-typehints==2.3.0",
     "sphinx-issues==5.0.0",
     "sphinx-argparse==0.5.2",
-    "msprime==1.3.3",
-    "numba==0.61.2",
+    "msprime==1.4.0b2",
+    "numba==0.63.1",
     "sphinx-book-theme",
     "pandas==2.2.3",
 ]
@@ -118,7 +118,7 @@ dev = [
     "xmlunittest",
     "newick",
     "zarr<3",
-    "jupyter-book",
+    "jupyter-book<2",
     "breathe",
     "sphinx-autodoc-typehints",
     "sphinx-issues",
