--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,9 +1,3 @@
-
-# Need to set PYTHONPATH so that we pick up the local tskit
-PYPATH=$(shell pwd)/../python/
-TSK_VERSION:=$(shell PYTHONPATH=${PYPATH} \
-   python -c 'import tskit; print(tskit.__version__.split("+")[0])')
-
 BUILDDIR      = _build
 DOXYGEN_XML=doxygen/xml
 
@@ -13,13 +7,7 @@ ${DOXYGEN_XML}: ../c/tskit/*.h
 	cd doxygen && doxygen
 
 dev:
-	PYTHONPATH=${PYPATH} ./build.sh
-
-dist:
-	@echo Building distribution for tskit version ${TSK_VERSION}
-	cd doxygen && doxygen
-	sed -i -e s/__TSKIT_VERSION__/${TSK_VERSION}/g _config.yml
-	PYTHONPATH=${PYPATH} ./build.sh
+	uv --project=../python run jupyter-book build -Wn --keep-going .
 
 clean:
 	rm -fR $(BUILDDIR) $(DOXYGEN_XML)
