--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,34 +1,61 @@
-codecov:
-  require_ci_to_pass: false
+# ignore:
+#   - "lib/tests/"
+#   - "lib/dev-tools/"
+#   - "lib/avl.c"
+#   - "lib/subprojects/**/*"
+
 comment:
-  layout: "diff, flags, files"
-fixes:
-  - "tskit/::python/tskit/"
-flag_management:
-  individual_flags:
-    - name: python-tests
+  layout: "header, diff, flags, components"  # show component info in the PR comment
+
+component_management:
+  individual_components:
+    - component_id: python_code
+      name: Python API
       paths:
         - python/tskit/*.py
-      statuses:
-        - type: project
-          target: 95%
-    - name: python-c-tests
+
+    - component_id: python_c_code
+      name: Python C interface
       paths:
         - python/_tskitmodule.c
-      statuses:
-        - type: project
-          target: 85%
-    - name: c-tests
+
+    - component_id: c_code
+      name: C library
       paths:
-        - c/tskit/*.c
-        - c/tskit/*.h
-      statuses:
-        - type: project
-          target: 85%
-    - name: lwt-tests
-      paths:
-        - python/lwt_interface/*.c
-        - python/lwt_interface/*.h
-      statuses:
-        - type: project
-          target: 80%
+        - c
+
+#
+# codecov:
+#   require_ci_to_pass: false
+# comment:
+#   layout: "diff, flags, files"
+# fixes:
+#   - "tskit/::python/tskit/"
+# flag_management:
+#   individual_flags:
+#     - name: python-tests
+#       paths:
+#         - python/tskit/*.py
+#       statuses:
+#         - type: project
+#           target: 95%
+#     - name: python-c-tests
+#       paths:
+#         - python/_tskitmodule.c
+#       statuses:
+#         - type: project
+#           target: 85%
+#     - name: c-tests
+#       paths:
+#         - c/tskit/*.c
+#         - c/tskit/*.h
+#       statuses:
+#         - type: project
+#           target: 85%
+#     - name: lwt-tests
+#       paths:
+#         - python/lwt_interface/*.c
+#         - python/lwt_interface/*.h
+#       statuses:
+#         - type: project
+#           target: 80%
