--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -94,39 +94,62 @@ docs = [
     "pandas",
 ]
 
-dev = [
-    "biopython>=1.70",
-    "coverage",
-    "dendropy",
-    "flake8",
-    "kastore",
-    "lshmm",
-    "msgpack",
-    "msprime",
-    "mypy",
-    "networkx",
-    "numba",
-    "portion",
-    "pre-commit",
-    "pytest",
-    "pytest-cov",
-    "pytest-xdist", 
-    "setuptools_scm",
-    "svgwrite",
-    "tszip",
-    "xmlunittest",
-    "newick",
-    "zarr",
-    "jupyter-book<2",
-    "breathe",
-    "sphinx-autodoc-typehints",
-    "sphinx-issues",
-    "sphinx-argparse",
-    "sphinx-book-theme",
-    "pandas",
+# Fully pin lint requirements for determinism.
+lint = [
     "clang-format==21.1.8",
+    "ruff==0.15.1",
+    "prek==0.3.3",
+]
+
+dev = [
+    {include-group = "docs"},
+    {include-group = "lint"},
+    {include-group = "test"},
 ]
 
 [tool.pytest.ini_options]
 addopts = "-n 4"
 testpaths = ["tests"]
+
+[tool.ruff]
+# Assume Python 3.11
+target-version = "py311"
+
+line-length = 89
+indent-width = 4
+
+[tool.ruff.lint]
+select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]
+
+ignore = [
+    "A001", "A002", "RUF",
+    "B905", #Don't add strict=False to zips (B905)
+    "E741", # using 'l' as a variable name
+    "N806", "N802", "N803", # Various nags about uppercase vars
+    "N818", # Exceptions not called "Error"
+    "UP032", # Don't upgrade to f strings
+    "UP031", # Allow old-skool format specifiers
+    "B904", # raise from-issues
+    "PT006", # Wrong type passed to first argument of `pytest.mark.parametrize`
+    "PT007", # Wrong values type in `pytest.mark.parametrize` expected `list` of `tuple`
+    "PT009", # Replace `assertAlmostEqual(...)` with `assert ...`
+    "PT018", # Assertion should be broken down into multiple parts
+    "PT030", # `pytest.warns(UserWarning)` is too broad, set the `match`
+    "PT009", # pytest.raises(ValueError) too broad
+    "PT011", # pytest.raises(ValueError) too broad
+    "PT012", # pytest.raises() block should contain a single simple statement
+    # "B028", # No stacklevel for warnings
+    "B018", # Found useless expression. Either assign it
+    "PT031", # `pytest.warns()` block should contain a single simple statement
+]
+
+fixable = ["ALL"]
+unfixable = []
+
+[tool.ruff.lint.isort]
+known-first-party = ["_tskit", "tskit", "lwt_interface"]
+known-third-party = [
+  "msprime",
+  "numpy",
+  "pytest",
+]
